fix contrast issues contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -15,7 +15,7 @@
 h1,
 h2{
 	text-shadow:0px 0px 6px rgb(0, 0, 0) ;
-	background-color: rgb(0 0 0 / 19%);
+	background-color: rgb(0 0 0 / 23%);
 }
 
 .contact__section--contact-info {
@@ -40,6 +40,7 @@ h2{
 
 .contact__div--visit-us {
 	background-color: var(--button--orange);
+	padding: 37px 13px;
 }
 
 .contact__section--h2-and-form{
